# hal_alif

./: .checkpatch.conf  .gitignore  CMakeLists.txt  CODEOWNERS  Jenkinsfile  LICENSE  README.md  linker_add_rom_symbols.ld  test_samples.groovy
automation/: Jenkinsfile
ble/: CMakeLists.txt  ble_patch_info.ld  ble_patch_ramable.ld  ble_reserved_ram.ld  rom_ble_stack.patch.elf
ble/include/: acc_mcs.h  acc_mcs_msg.h  acc_ot.h  acc_tbc.h  acc_tbc_msg.h  acc_tbs.h  acc_tbs_msg.h  anp_common.h  anps.h  anps_msg.h  arc.h  arc_aics_msg.h  arc_mic.h  arc_micc_msg.h  arc_mics.h  arc_mics_msg.h  arc_msg.h  arc_vc.h  arc_vcc.h  arc_vcc_msg.h  arc_vcs_msg.h  arc_voc.h  arc_vocc_msg.h  atc.h  atc_csisc.h  atc_csisc_msg.h  atc_csism_msg.h  atc_msg.h  bap.h  bap_bc_scan.h  bap_bc_scan_msg.h  bap_bc_sink.h  bap_bc_src_msg.h  bap_capa.h  bap_capa_cli.h  bap_capa_cli_msg.h  bap_msg.h  bap_uc_cli.h  bap_uc_cli_msg.h  bap_uc_cli_test.h  (+119 more)
ble/plf/: alif_ble.c  alif_ble.h  arch.h  compiler.h  hci_uart.c  hci_uart.h  host_timer_kernel.c  sync_timer.c  sync_timer.h  timer.h
ble/v1_0/: CMakeLists.txt  rom_ble_stack.patch.elf  rom_symbols_ble.lds
ble/v1_2/: rom_symbols_ble.lds
ble/zephyr/: Kconfig
common/: CMakeLists.txt
common/include/: alif_protocol_const.h  arch.h  es0_power_manager.h  mram_rw.h  sau_tcm_ns_setup.h  soc_memory_map.h  tgu.h
driver/: CMakeLists.txt
drivers/: CMakeLists.txt
ieee802154/: CMakeLists.txt  Kconfig
lc3/: CMakeLists.txt  lc3_patch_info.ld  lc3_patch_ramable.ld  lc3_reserved_ram.ld
se_services/: CMakeLists.txt
zephyr/: Kconfig  module.yml
(+526 files in other folders)
